--- a/!--.html
+++ b/!--.html
@@ -60,7 +60,11 @@
     </div>
     <div class="contents">
       <p>
-        Here is body section.
+        <strong>Here is &lt!--&gt section.</strong><br><br>
+
+        This tag is the comment tag which is used to insert comments in the source code. Comments are not displayed in the browsers. <br><br>
+
+        You can use comments to explain your code, which can help you when you edit the source code at a later date. This is especially useful if you have a lot of code.
       </p>
     </div>
   </body>
