--- a/!DOCTYPE.html
+++ b/!DOCTYPE.html
@@ -60,7 +60,7 @@
     </div>
     <div class="contents">
       <p>
-        Here is body section.
+        Here is xxxx section.
       </p>
     </div>
   </body>
