--- a/head.html
+++ b/head.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>head</title>
+    <title>HTML Tag Study</title>
     <meta charset="utf-8">
     <style>
     div.home {
       width: 100%;
       height: 150px;
-      border: 1px solid #000
     }
     div.menu {
       width: 17.5%;
@@ -22,11 +21,42 @@
   </head>
   <body>
     <div class="home">
-      <a href="main.html">Go to Home</a>
+      <a href="main.html"><img src="html study banner.png" height="150" width="1875"></a>
     </div>
     <div class="menu">
-      a<br>
-      b
+      <b>frequently used tags</b><br>
+      <ol>
+        <li><a href="!--.html">!--</a></li>
+        <li><a href="!DOCTYPE.html">!DOCTYPE</a></li>
+        <li><a href="html.html">html</a></li>
+        <li><a href="head.html">head</a></li>
+        <li><a href="body.html">body</a></li>
+        <li><a href="title.html">title</a></li>
+        <li><a href="meta.html">meta</a></li>
+        <li><a href="div.html">div</a></li>
+        <li><a href="a.html">a</a></li>
+        <li><a href="script.html">script</a></li>
+        <li><a href="link.html">link</a></li>
+        <li><a href="img.html">img</a></li>
+        <li><a href="span.html">span</a></li>
+        <li><a href="p.html">p</a></li>
+        <li><a href="li.html">li</a></li>
+        <li><a href="ul.html">ul</a></li>
+        <li><a href="style.html">style</a></li>
+        <li><a href="br.html">br</a></li>
+        <li><a href="h1.html">h1</a></li>
+        <li><a href="h2.html">h2</a></li>
+        <li><a href="input.html">input</a></li>
+        <li><a href="form.html">form</a></li>
+        <li><a href="h3.html">h3</a></li>
+        <li><a href="nav.html">nav</a></li>
+        <li><a href="header.html">header</a></li>
+        <li><a href="footer.html">footer</a></li>
+        <li><a href="iframe.html">iframe</a></li>
+        <li><a href="strong.html">strong</a></li>
+        <li><a href="button.html">button</a></li>
+        <li><a href="i.html">i</a></li>
+      </ol>
     </div>
     <div class="contents">
       <p>
